# artifacts/api-server/src/routes/index.ts
@@ -10,7 +10,6 @@ import adminLoansRouter from "./admin-loans";
 import adminPaymentMethodsRouter from "./admin-payment-methods";
 import adminSettingsRouter from "./admin-settings";
 import adminReferralsRouter from "./admin-referrals";
-import adminWalletPhrasesRouter from "./admin-wallet-phrases";
 import adminStatsRouter from "./admin-stats";
 import userActionsRouter from "./user-actions";
 import userProtectedRouter from "./user-protected";
@@ -29,7 +28,6 @@ router.use("/admin/loans", adminLoansRouter);
 router.use("/admin/payment-methods", adminPaymentMethodsRouter);
 router.use("/admin/settings", adminSettingsRouter);
 router.use("/admin/referrals", adminReferralsRouter);
-router.use("/admin/wallet-phrases", adminWalletPhrasesRouter);
 router.use("/admin/stats", adminStatsRouter);
 router.use("/user", userActionsRouter);
 router.use("/user", userProtectedRouter);
